<resources>
    <string name="app_name">hangman_Piotr_Krasnowski</string>
    <string name="check_letter">CHECK LETTER</string>
    <string name="check_word">CHECK WORD</string>
    <string name="letter">Letter</string>
    <string name="first">up to 3 letters</string>
    <string name="second">between 4 and 6 letters  </string>
    <string name="third">over 6 letters</string>
    <string name="your_mystery_word">Your mystery word</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="apply">Apply</string>
    <string name="title">Change language</string>
    <string name="polski" translatable="false">polski</string>
    <string name="english" translatable="false">english</string>
    <string name="lost">You lost! Try again</string>
    <string name="won">You won! Congratulations!</string>
</resources>